# aircraft-engeneering-tools-detecton

./: .gitignore  README.md  docker-compose.dev.yml  refs.bib
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_users.py  0002_add_sessions_table.py  0003_add_session_images.py
backend/models/: .gitkeep
backend/src/: app.py
backend/src/api/routers/: auth.py  predict.py  sessions.py
backend/src/api/schemas/: auth.py  common.py  predict.py  sessions.py
backend/src/core/: auth.py  db.py  logging.py  security.py  settings.py
backend/src/ml/: __init__.py  yolo_service.py
backend/src/models/: session.py  user.py
backend/src/services/: users_service.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_integration.py  test_predict.py  test_security.py  test_sessions.py  test_simplified.py  test_validation.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: CreateSessionModal.vue  HandoutRecognition.vue  HandoverRecognition.vue  Logo.vue  NotificationSystem.vue  SessionDiff.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts  notifications.ts  recognition.ts  sessions.ts
frontend/src/types/: konva.d.ts
frontend/src/views/: AuthView.vue  DashboardView.vue  HomeView.vue  RecognitionView.vue  SessionView.vue
